--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ dist: trusty
 language: haxe
 
 haxe:
- - "3.4.7"
- - "development"
+ - "4.0.0-rc.1"
 
 install:
  - haxelib dev ghostlib .
@@ -15,7 +14,7 @@ script:
 
 deploy:
  - provider: script
-   haxe: 3.4.7
+   haxe: "4.0.0-rc.1"
    script: bash ./release_haxelib.sh $HAXELIB_PWD
    on:
 	  tags: true
